--- a/project-demos/ivy-insights/IvyInsights.csproj
+++ b/project-demos/ivy-insights/IvyInsights.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,6 +7,7 @@
     <Nullable>enable</Nullable>
     <NoWarn>CS8618;CS8603;CS8602;CS8604;CS9113</NoWarn>
     <RootNamespace>IvyInsights</RootNamespace>
+    <UserSecretsId>e8bb724a-3b0b-42dd-8b9d-01725b8695cf</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
